--- a/Лабораторная 1.1
+++ b/Лабораторная 1.1
@@ -5,30 +5,27 @@ using namespace std;
 
 class Character {
 private:
-    string name;  // Приватное поле: имя персонажа
-    int health;        // Приватное поле: уровень здоровья
-    int attack;        // Приватное поле: уровень атаки
-    int defense;       // Приватное поле: уровень защиты
+    string name;  
+    int health;       
+    int attack;        
+    int defense;       
     const int maxHealth = 100;
 
 public:
-    // Конструктор для инициализации данных
+
     Character(const string& n, int h, int a, int d)
         : name(n), health(h), attack(a), defense(d) {
     }
 
-    // Метод для получения уровня здоровья
     int getHealth() const {
         return health;
     }
 
-    // Метод для вывода информации о персонаже
     void displayInfo() const {
         cout << "Name: " << name << ", HP: " << health
             << ", Attack: " << attack << ", Defense: " << defense << endl;
     }
 
-    // Метод для атаки другого персонажа
     void attackEnemy(Character& enemy) {
         int damage = attack - enemy.defense;
         if (damage > 0) {
@@ -40,7 +37,6 @@ public:
         }
     }
 
-    // Метод для получения урона персонажем
     void takeDamage(int amount) {
         health -= amount;
         if (health < 0) {
@@ -49,7 +45,6 @@ public:
         cout << name << " takes " << amount << " damage" << endl;
     }
 
-    // Метод для лечения персонажа
     void heal(int amount) {
         health += amount;
         if (health > maxHealth) {
@@ -61,22 +56,17 @@ public:
 
 int main() {
 
-    // Создаем объекты персонажей
     Character hero("Hero", 100, 20, 10);
     Character monster("Goblin", 50, 15, 5);
 
-    // Выводим информацию о персонажах
     hero.displayInfo();
     monster.displayInfo();
 
-    // Герой атакует монстра
     hero.attackEnemy(monster);
     monster.displayInfo();
 
-    // Герой получает урон
     hero.takeDamage(50);
 
-    //Герой лечится
     hero.heal(60);
 
     return 0;
