--- a/Лабораторная 1.2
+++ b/Лабораторная 1.2
@@ -5,14 +5,13 @@ using namespace std;
 
 class Entity {
 protected:
-    string name; // Защищенное поле: имя
-    int health;      // Защищенное поле: здоровье
+    string name; 
+    int health;  
 
 public:
-    // Конструктор базового класса
+
     Entity(const string& n, int h) : name(n), health(h) {}
 
-    // Метод для вывода информации
     virtual void displayInfo() const {
         cout << "Name: " << name << ", HP: " << health << endl;
     }
@@ -22,62 +21,59 @@ public:
 
 class Player : public Entity {
 private:
-    int experience; // Приватное поле: опыт
+    int experience; 
 
 public:
-    // Конструктор производного класса
+
     Player(const string& n, int h, int exp)
         : Entity(n, h), experience(exp) {
     }
 
-    // Переопределение метода displayInfo
     void displayInfo() const override {
-        Entity::displayInfo(); // Вызов метода базового класса
+        Entity::displayInfo(); 
         cout << "Experience: " << experience << endl;
     }
 };
 
 class Enemy : public Entity {
 private:
-    string type; // Приватное поле: тип врага
+    string type; 
 
 public:
-    // Конструктор производного класса
+
     Enemy(const string& n, int h, const string& t)
         : Entity(n, h), type(t) {
     }
 
-    // Переопределение метода displayInfo
     void displayInfo() const override {
-        Entity::displayInfo(); // Вызов метода базового класса
+        Entity::displayInfo(); 
         cout << "Type: " << type << endl;
     }
 };
 
-// Класс Boss наследуется от Enemy
 class Boss : public Enemy {
 private:
-    string specialAbility; // Уникальное свойство босса
+    string specialAbility; 
 
 public:
-    // Конструктор класса Boss
+
     Boss(const string& n, int h, const string& t, const string& ability)
         : Enemy(n, h, t), specialAbility(ability) {}
 
-    // Переопределение метода displayInfo
+
     void displayInfo() const override {
-        Enemy::displayInfo(); // Вызов метода базового класса
+        Enemy::displayInfo(); 
         cout << "Special Ability: " << specialAbility << endl;
     }
 };
 
 int main() {
-    // Создаем объекты игрока и врага
+
     Player hero("Hero", 100, 0);
     Enemy monster("Goblin", 50, "Goblin");
     Boss FinalBoss("Mortis", 100, "Necromancer", "Rise of the undead");
 
-    // Выводим информацию о персонажах
+
     hero.displayInfo();
     monster.displayInfo();
     FinalBoss.displayInfo();
